import alignContent from '../corePlugins/alignContent';
import alignItems from '../corePlugins/alignItems';
import alignSelf from '../corePlugins/alignSelf';
import backfaceVisibility from '../corePlugins/backfaceVisibility';
import borderStyle from '../corePlugins/borderStyle';
import direction from '../corePlugins/direction';
import display from '../corePlugins/display';
import flexDirection from '../corePlugins/flexDirection';
import flexWrap from '../corePlugins/flexWrap';
import fontStyle from '../corePlugins/fontStyle';
import fontWeight from '../corePlugins/fontWeight';
import justifyContent from '../corePlugins/justifyContent';
import objectFit from '../corePlugins/objectFit';
import overflow from '../corePlugins/overflow';
import position from '../corePlugins/position';
import resize from '../corePlugins/resize';
import textAlign from '../corePlugins/textAlign';
import textDecoration from '../corePlugins/textDecoration';
import textTransform from '../corePlugins/textTransform';
import verticalAlign from '../corePlugins/verticalAlign';
import backgroundColor from '../corePlugins/backgroundColor';
import borderColor from '../corePlugins/borderColor';
import borderRadius from '../corePlugins/borderRadius';
import borderWidth from '../corePlugins/borderWidth';
import flex from '../corePlugins/flex';
import flexGrow from '../corePlugins/flexGrow';
import flexShrink from '../corePlugins/flexShrink';
import fontFamily from '../corePlugins/fontFamily';
import fontSize from '../corePlugins/fontSize';
import height from '../corePlugins/height';
import inset from '../corePlugins/inset';
import top from '../corePlugins/top';
import bottom from '../corePlugins/bottom';
import left from '../corePlugins/left';
import right from '../corePlugins/right';
import start from '../corePlugins/start';
import end from '../corePlugins/end';
import letterSpacing from '../corePlugins/letterSpacing';
import lineHeight from '../corePlugins/lineHeight';
import margin from '../corePlugins/margin';
import maxHeight from '../corePlugins/maxHeight';
import maxWidth from '../corePlugins/maxWidth';
import minHeight from '../corePlugins/minHeight';
import minWidth from '../corePlugins/minWidth';
import opacity from '../corePlugins/opacity';
import padding from '../corePlugins/padding';
import textColor from '../corePlugins/textColor';
import tint from '../corePlugins/tint';
import width from '../corePlugins/width';
import zIndex from '../corePlugins/zIndex';
import insetDir from '../corePlugins/insetDir';
import borderWidthDir from '../corePlugins/borderWidthDir';
import borderRadiusDir from '../corePlugins/borderRadiusDir';
import boxShadow from '../corePlugins/boxShadow';
import textShadow from '../corePlugins/textShadow';

test('alignContent', () => {
    expect(alignContent).toMatchSnapshot();
});

test('alignItems', () => {
    expect(alignItems).toMatchSnapshot();
});

test('alignSelf', () => {
    expect(alignSelf).toMatchSnapshot();
});

test('backfaceVisibility', () => {
    expect(backfaceVisibility).toMatchSnapshot();
});

test('borderStyle', () => {
    expect(borderStyle).toMatchSnapshot();
});

test('direction', () => {
    expect(direction).toMatchSnapshot();
});

test('display', () => {
    expect(display).toMatchSnapshot();
});

test('flexDirection', () => {
    expect(flexDirection).toMatchSnapshot();
});

test('flexWrap', () => {
    expect(flexWrap).toMatchSnapshot();
});

test('fontStyle', () => {
    expect(fontStyle).toMatchSnapshot();
});

test('fontWeight', () => {
    expect(fontWeight).toMatchSnapshot();
});

test('justifyContent', () => {
    expect(justifyContent).toMatchSnapshot();
});

test('objectFit', () => {
    expect(objectFit).toMatchSnapshot();
});

test('overflow', () => {
    expect(overflow).toMatchSnapshot();
});

test('position', () => {
    expect(position).toMatchSnapshot();
});

test('resize', () => {
    expect(resize).toMatchSnapshot();
});

test('textAlign', () => {
    expect(textAlign).toMatchSnapshot();
});

test('textDecoration', () => {
    expect(textDecoration).toMatchSnapshot();
});

test('textTransform', () => {
    expect(textTransform).toMatchSnapshot();
});

test('verticalAlign', () => {
    expect(verticalAlign).toMatchSnapshot();
});

test('backgroundColor', () => {
    expect(backgroundColor).toMatchSnapshot();
});

test('borderColor', () => {
    expect(borderColor).toMatchSnapshot();
});

test('borderRadius', () => {
    expect(borderRadius).toMatchSnapshot();
});

test('borderWidth', () => {
    expect(borderWidth).toMatchSnapshot();
});

test('flex', () => {
    expect(flex).toMatchSnapshot();
});

test('flexGrow', () => {
    expect(flexGrow).toMatchSnapshot();
});

test('flexShrink', () => {
    expect(flexShrink).toMatchSnapshot();
});

test('fontFamily', () => {
    expect(fontFamily).toMatchSnapshot();
});

test('fontSize', () => {
    expect(fontSize).toMatchSnapshot();
});

test('height', () => {
    expect(height).toMatchSnapshot();
});

test('inset', () => {
    expect(inset).toMatchSnapshot();
});

test('top', () => {
    expect(top).toMatchSnapshot();
});

test('bottom', () => {
    expect(bottom).toMatchSnapshot();
});

test('left', () => {
    expect(left).toMatchSnapshot();
});

test('right', () => {
    expect(right).toMatchSnapshot();
});

test('start', () => {
    expect(start).toMatchSnapshot();
});

test('end', () => {
    expect(end).toMatchSnapshot();
});

test('letterSpacing', () => {
    expect(letterSpacing).toMatchSnapshot();
});

test('lineHeight', () => {
    expect(lineHeight).toMatchSnapshot();
});

test('margin', () => {
    expect(margin).toMatchSnapshot();
});

test('maxHeight', () => {
    expect(maxHeight).toMatchSnapshot();
});

test('maxWidth', () => {
    expect(maxWidth).toMatchSnapshot();
});

test('minHeight', () => {
    expect(minHeight).toMatchSnapshot();
});

test('minWidth', () => {
    expect(minWidth).toMatchSnapshot();
});

test('opacity', () => {
    expect(opacity).toMatchSnapshot();
});

test('padding', () => {
    expect(padding).toMatchSnapshot();
});

test('textColor', () => {
    expect(textColor).toMatchSnapshot();
});

test('tint', () => {
    expect(tint).toMatchSnapshot();
});

test('width', () => {
    expect(width).toMatchSnapshot();
});

test('zIndex', () => {
    expect(zIndex).toMatchSnapshot();
});

test('insetDir', () => {
    expect(insetDir).toMatchSnapshot();
});

test('borderWidthDir', () => {
    expect(borderWidthDir).toMatchSnapshot();
});

test('borderRadiusDir', () => {
    expect(borderRadiusDir).toMatchSnapshot();
});

test('boxShadow', () => {
    expect(boxShadow).toMatchSnapshot();
});

test('textShadow', () => {
    expect(textShadow).toMatchSnapshot();
});
